# dbus-java-filedescriptor

./: pom.xml
src/main/c/: testfd.c
src/main/cpp/: CMakeLists.txt  FDGetter.cpp  FDRX.cpp  FDTX.cpp
src/main/java/fd_rx/: FDInterface.java  FDRX.java  FDTX.java  NativeLib.java
src/main/java/fdtest/: fdtester.java
src/main/java/test/: ReturnFD.java  ReturnFDInterface.java
src/main/resources/: log4j2.xml
